# pysam

./: .gitignore  .readthedocs.yml  AdjustmentFactors.c  CMakeLists.txt  CONTRIBUTING.md  ErrorHandler.h  GenericSystem.c  LICENSE  MANIFEST.in  PowerPlant.c  PySAM_utils.h  README.md  RELEASE-notes.md  RELEASE.md  SAM_AdjustmentFactors-man.h  SAM_GenericSystem-man.h  SAM_GenericSystem.h  SAM_api.h  TestSystem.c  benchmark.py  build.sh  build_conda.sh  build_conda_arm64.sh  build_manylinux.sh  build_manylinux_arm64.sh  build_unix.sh  build_unix_arm64.sh  build_win.bat  demo.py  keywdarg.c  meta.yaml  requirements.txt  setup.cfg  setup.py  setup_stubs.py  test.py  urdb_rate_618940545457a35a1c4097ec.json  xxmodule.c
Examples/: 100kW_PVWatts.json  100mW_Generic.json  BatteryStateful.ipynb  BatteryStateful_CustomLifeModel.ipynb  BatteryWithCustomDispatch.py  FetchResourceFileExample.py  GenericSystemSingleOwnerExample.py  LEAC_plot_iter.py  LoadToolsExample.py  NonAnnualSimulation-sample_data.csv  NonAnnualSimulation.ipynb  PVPMC_Workshop_Example2.ipynb  PV_battery_commercial_example_cashloan.json  PV_battery_commercial_example_pvsamv1.json  PV_utility_example_pvsamv1.json  PV_utility_example_singleowner.json  PV_utility_example_utilityrate5.json  PVsamv1Tools.ipynb  PySAMWorkshop.ipynb  PySAM_PVPMC_Tutorial.ipynb  PySAM_PVPMC_Tutorial_basic.ipynb  ResidentialPVBatteryWithCustomDispatch.py  SAMsimPVWattsCommercialExample.py  Untitled.ipynb  UtilityRateForecastExample.py  UtilityRatesExample.py  nsrdb_39.7_-105.1_psm3-tmy_60_tmy.csv  nsrdb_data_query_response_39.7_-105.1.json  resource.json  sample_load.csv  sscapi.h  untitled__1__belpe.json  untitled__1__cashloan.json  untitled__1__pvsamv1.json  urdb_rate_618940545457a35a1c4097ec.json
conda/: bld.bat  build.sh  meta.yaml
data/: PySSC.py
docs/: Configs.rst  Examples.rst  GettingStarted.rst  Import.rst  Initialization.rst  Models.rst  PySSC.rst  Tools.rst  Version.rst  VersionChanges.rst  Webinars.rst  building-pysam.rst  conf.py  hybrids.rst  (+19 more)
(+1237 files in other folders)
